--- a/Smart Contract/package.json
+++ b/Smart Contract/package.json
@@ -2,9 +2,11 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "hardhat": "^2.19.0"
+    "hardhat": "^2.19.1",
+    "hardhat-deploy": "^0.11.43"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^5.0.0",
     "chai": "^4.3.10",
     "mocha": "^10.2.0"
   }
